# proyecto_pccd

./: CMakeLists.txt  launcher.c  main.c  pagos.c  pintargraficas.plot  porcentajeSC.plot  procesos.plot  process.c  receptor.c  scPorProceso.plot  scPorProcesoTiempoTotal.plot  test.txt
headers/: coms.h  exit.h  inits.h  launcherUtils.h  logger.h  out.h  priorityUtils.h  ticketUtils.h  tiempo.h
lib/: coms.c  exit.c  inits.c  launcherUtils.c  logger.c  out.c  priorityUtils.c  ticketUtils.c  tiempo.c
tests/: 1C.test  1M.test  1MC.test  1MP.test  XC.test  XM.test  XMP.test  XMPC.test  example.test  multipleProcessesPerNode.test  multipleWithDelay.test  noDelayNoPriority.test  oneProcessPerNode.test  priorities.test  prueba1.test  prueba10.test  prueba2.test  prueba4.test  prueba5.test  prueba6.test  prueba8.test  prueba9.test
